<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8F57C"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="220dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:background="@drawable/about_linux"
        android:contentDescription="@string/app_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/app_name"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/about_version"
        android:textColor="#FEA400"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableLeft="@drawable/about_qq_icon"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:text="@string/qq_num"
        android:textColor="#EE00FA"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="8dp"
        android:text="@string/qq_email"
        android:textColor="#FF1102"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawablePadding="8dp"
        android:text="@string/about_thanks"
        android:textColor="#0309FF"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/star"
        android:drawablePadding="8dp"
        android:drawableRight="@drawable/star"
        android:text="@string/about_content"
        android:textColor="#D9726B"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawablePadding="5dp"
        android:text="@string/about_buttom"
        android:textColor="#7A5D58"
        android:textSize="12sp" />

</LinearLayout>